# Clearcore-Project

./: .travis.yml  CMakeLists.txt  CONTRIBUTING.md  COPYING  INSTALL  Makefile.am  README.md  configure.ac
.github/: ISSUE_TEMPLATE.md
.travis/: test_05_before_script.sh  test_06_script.sh  test_06_script_a.sh  test_06_script_b.sh
.tx/: config
build-aux/m4/: bitcoin_qt.m4  gmp.m4
build-aux/snap/: snapcraft.yaml
contrib/: clr-cli.bash-completion  clr-qt.pro  clr-tx.bash-completion  clrd.bash-completion  gitian-build.py  install_db4.sh  valgrind.supp
contrib/debian/: README.md  changelog  clr-qt.desktop  clr-qt.install  clr-qt.manpages  clr-qt.protocol  clrd.bash-completion  clrd.examples  clrd.install  clrd.lintian-overrides  clrd.manpages  clrd.postinst  clrd.postrm  clrd.service  control  rules  watch
contrib/devtools/: README.md  check-doc.py  copyright_header.py  gen-manpages.sh  logprint-scanner.py  update-translations.py
contrib/init/: README.md  (+6 more)
depends/: Makefile  README.md
doc/: Doxyfile.in  README.md  README_osx.md  README_windows.txt  REST-interface.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  developer-notes.md  dnsseed-policy.md  files.md  gitian-building.md  guide-startmany.md  init.md  masternode-budget.md  masternode_conf.md  multiwallet-qt.md  release-notes.md  release-process.md  swifttx.md  tor.md  translation_process.md  translation_strings_policy.md  unit-tests.md  zmq.md
share/: genbuild.sh  setup.nsi.in  ui.rc
src/: .clang-format  Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  accumulatorcheckpoints.cpp  accumulatorcheckpoints.h  accumulatorcheckpoints.json.h  accumulatormap.cpp  accumulatormap.h  accumulators.cpp  accumulators.h  activemasternode.cpp  activemasternode.h  addrdb.cpp  addrdb.h  addressbook.cpp  addressbook.h  addrman.cpp  addrman.h  alert.cpp  alert.h  amount.cpp  amount.h  base58.cpp  base58.h  bip38.cpp  bip38.h  blob_uint256.h  blocksignature.cpp  blocksignature.h  bloom.cpp  bloom.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  (+151 more)
src/qt/: CMakeLists.txt  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.cpp  bantablemodel.h  bip38tooldialog.cpp  bip38tooldialog.h  bitcoinaddressvalidator.cpp  bitcoinamountfield.cpp  bitcoingui.cpp  bitcoingui.h  bitcoinunits.cpp  bitcoinunits.h  blockexplorer.cpp  blockexplorer.h  clientmodel.cpp  clientmodel.h  clr.cpp  clr.qrc  clr_locale.qrc  clrstrings.cpp  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  governancepage.cpp  governancepage.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macnotificationhandler.h  (+74 more)
src/qt/clr/: addnewaddressdialog.cpp  addnewaddressdialog.h  addnewcontactdialog.cpp  addnewcontactdialog.h  addresseswidget.cpp  addresseswidget.h  addressfilterproxymodel.cpp  addressfilterproxymodel.h  addressholder.cpp  addressholder.h  addresslabelrow.cpp  addresslabelrow.h  clrgui.cpp  clrgui.h  coldstakingmodel.cpp  coldstakingmodel.h  coldstakingwidget.cpp  coldstakingwidget.h  contactdropdownrow.cpp  contactdropdownrow.h  contactsdropdown.cpp  contactsdropdown.h  csrow.cpp  csrow.h  dashboardwidget.cpp  dashboardwidget.h  defaultdialog.cpp  defaultdialog.h  expandablebutton.cpp  expandablebutton.h  focuseddialog.cpp  focuseddialog.h  furabstractlistitemdelegate.cpp  furabstractlistitemdelegate.h  furlistrow.h  guitransactionsutils.cpp  guitransactionsutils.h  loadingdialog.cpp  loadingdialog.h  lockunlock.cpp  (+53 more)
src/qt/clr/forms/: addresseswidget.ui  coldstakingwidget.ui  csrow.ui  dashboardwidget.ui  masternodeswidget.ui  masternodewizarddialog.ui  receivewidget.ui  requestdialog.ui  send.ui  sendchangeaddressdialog.ui  sendcustomfeedialog.ui  sendmultirow.ui  topbar.ui  welcomecontentwidget.ui
src/qt/clr/res/css/: style_dark.css  style_light.css
src/qt/clr/settings/: settingsbackupwallet.cpp  settingsbackupwallet.h  settingsbittoolwidget.cpp  settingsbittoolwidget.h  settingsconsolewidget.cpp  settingsconsolewidget.h  settingsdisplayoptionswidget.cpp  settingsdisplayoptionswidget.h  settingsexportcsv.cpp  settingsexportcsv.h  settingsfaqwidget.cpp  settingsfaqwidget.h  settingsinformationwidget.cpp  settingsinformationwidget.h  settingsmainoptionswidget.cpp  settingsmainoptionswidget.h  settingsmultisenddialog.cpp  settingsmultisenddialog.h  settingsmultisendwidget.cpp  settingsmultisendwidget.h  settingsnetworkwidget.cpp  settingsnetworkwidget.h  settingssignmessagewidgets.cpp  settingssignmessagewidgets.h  settingswalletoptionswidget.cpp  settingswalletoptionswidget.h  settingswalletrepairwidget.cpp  settingswalletrepairwidget.h  settingswidget.cpp  settingswidget.h
src/qt/clr/settings/forms/: settingsbittoolwidget.ui  settingsdisplayoptionswidget.ui  settingsfaqwidget.ui  settingsmainoptionswidget.ui  settingssignmessagewidgets.ui  settingswidget.ui
src/qt/forms/: addressbookpage.ui  bip38tooldialog.ui  blockexplorer.ui  coincontroldialog.ui  helpmessagedialog.ui  intro.ui  multisenddialog.ui  multisigdialog.ui  obfuscationconfig.ui  optionsdialog.ui  overviewpage.ui  privacydialog.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui  zclrcontroldialog.ui
src/qt/locale/: clr_bg.ts  clr_ca.ts  clr_cs.ts  clr_da.ts  clr_de.ts  clr_en.ts  clr_en_US.ts  clr_eo.ts  clr_es.ts  clr_es_ES.ts  clr_fi.ts  clr_fr_FR.ts  clr_hi_IN.ts  clr_hr.ts  clr_hr_HR.ts  clr_it.ts  clr_ja.ts  clr_ko_KR.ts  clr_lt_LT.ts  clr_nl.ts  clr_pl.ts  clr_pt.ts  clr_pt_BR.ts  clr_ro_RO.ts  clr_ru.ts  clr_sk.ts  clr_sv.ts  clr_tr.ts  clr_uk.ts  clr_vi.ts  clr_zh_CN.ts  clr_zh_TW.ts
src/qt/res/: clr-qt-res.rc
src/qt/res/css/: default.css
src/qt/res/icons/: bitcoin.icns
src/qt/test/: paymentservertests.cpp  test_main.cpp  uritests.cpp
test/: README.md
util/: fetch-params.sh
(+358 files in other folders)
